<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.cardInfo.fragment.InformationFragment">

    <EditText
        android:id="@+id/search_string"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        style="@style/Show_Text_Style"
        android:inputType="number"
        android:enabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintVertical_bias="0.2"
        android:paddingHorizontal="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>


    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:src="@drawable/search_24px"
        android:background="@drawable/selector_button"
        app:layout_constraintDimensionRatio="1:1"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="@id/search_string"
        app:layout_constraintBottom_toBottomOf="@id/search_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_string"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/search_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_search"
        style="@style/Result_Text_Style"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

    <LinearLayout
        android:id="@+id/card_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Result_Text_Style"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_country"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/name_of_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_country_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_coordinates"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_latitude"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_longitude"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_type" />

            <TextView
                android:id="@+id/type_of_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_card_type" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_bank"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_bank_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url_text"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url_of_bank" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_text"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_of_bank" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_text"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_see_requests"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Result_Text_Style"
        android:backgroundTint="@color/green"
        android:focusable="true"
        android:clickable="true"
        android:enabled="true"
        android:text="@string/requests"
        app:layout_constraintTop_toBottomOf="@+id/card_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>